# vitaDating

./: .gitignore  Procfile  README.md  db.sqlite3  history.txt  manage.py  nginx.conf.erb  package-lock.json  package.json  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: django.yml
Auth/: forms.py  views.py
VitaDating/: asgi.py  helpers.py  settings.py  urls.py  wsgi.py
activity/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
activity/migrations/: 0001_initial.py  0002_initial.py
auth/: views.py
conf/: nginx.conf.erb
config/: nginx.conf.erb
instant/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
instant/migrations/: 0001_initial.py  0002_chat_chat_id.py  0002_initial.py  0003_auto_20210416_1740.py
main/: urls.py  views.py
notifications/: admin.py  models.py  urls.py  views.py
notifications/migrations/: 0001_initial.py  0002_auto_20210412_1819.py  0002_initial.py  0003_rename_reciever_notifications_to.py
static/: upload.js
staticfiles/: staticfiles.json  temp.626978a255a0.js  temp.e2fe06ff2b31.js  upload.js
staticfiles/css/: style.56870d8c258a.css  style.b6d61a0ce6ee.css  style.c445ba249462.css  style.f748da15e3c5.css
theme/: postcss.config.js  processors.py  styles.css  tailwind.config.js
theme/TEMPLATE_DIRS/: 404.html
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: base.html  login.html  main.html  register.html
theme/templatetags/: fix_dates.py
vibe_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vibe_api/migrations/: 0001_initial.py  (+1 more)
vibe_auth/: apps.py  auth_backend.py  forms.py  urls.py  views.py
vibe_user/: admin.py  forms.py  models.py  urls.py  views.py
vibetube/: asgi.py  helpers.py  settings.py  urls.py  views.py  wsgi.py
video/: admin.py  forms.py  models.py  urls.py  views.py
vitaDatingapi/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
vitaDatingauth/: apps.py  auth_backend.py  forms.py  urls.py  views.py
vitaDatinguser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+49 files in other folders)
