[tool.poetry]
name = "VibeTube"
version = "0.1.0"
description = ""
authors = ["Carlos Luevano", "Dessance Chandler","Jalon Dodson", "Jen Schneider"]

[tool.poetry.dependencies]
python = "3.10.12"
Django = "^3.1.7"
django-tailwind = "^1.2.0"
gunicorn = "^20.1.0"
django-environ = "^0.4.5"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"
Pillow = "10.4.0"
moviepy = "^1.0.3"
ffmpeg = "^1.4"
djangorestframework = "^3.12.4"
django-cors-headers = "^3.7.0"
sendgrid = "^6.6.0"
whitenoise = "^5.2.0"
django-storages = "^1.11.1"
boto3 = "^1.17.54"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
